# TrueMan

./: Cargo.toml  README.md
C/include/trueman/: stddef.h
C/include/trueman/crypto/: hash.h
C/include/trueman/util/: code.h  hash.h
C/src/: GNUmakefile
C/src/crypto/: GNUmakefile  hash
C/src/util/: GNUmakefile  code  hash  lib.rs
C/tests/crypto/hash/csum/: GNUmakefile.macos  main.c  main.cpp
C/tests/crypto/hash/fnv128a/: GNUmakefile.linux  main.c  main.cpp
C/tests/crypto/hash/md5/: main.c  main.cpp
C/tests/util/code/base16/: main.c  main.cpp
C/tests/util/code/base64/: GNUmakefile.linux  main.c  main.cpp
C/tests/util/code/ucs2/: GNUmakefile.macos  main.c  main.cpp
C/tests/util/code/ucs4/: main.c  main.cpp
C/tests/util/code/uintx/: main.c  main.cpp
C/tests/util/hash/bkdr/: main.c  main.cpp
C/tests/util/hash/fnv1/: main.c  main.cpp
C/tests/util/hash/fnv1a/: main.c  main.cpp
C/tests/util/hash/jenkins/: main.c  main.cpp
C/tests/util/hash/wang/: main.c  main.cpp
C/tests/util/hash/xx/: main.c  main.cpp
RUST/crypto/hash/: Cargo.toml
RUST/crypto/hash/examples/: Cargo.toml
RUST/crypto/hash/examples/src/: csum.rs  fnv128a.rs  md5.rs
RUST/crypto/hash/src/: lib.rs
RUST/util/code/: Cargo.toml
RUST/util/code/examples/: Cargo.toml
RUST/util/code/examples/src/: base16.rs  base64.rs  ucs.rs  uintx.rs
RUST/util/code/src/: lib.rs
RUST/util/hash/: Cargo.toml
RUST/util/hash/examples/: Cargo.toml
RUST/util/hash/examples/src/: bkdr.rs  fnv1.rs  fnv1a.rs  jenkins.rs  wang.rs  xx.rs
RUST/util/hash/src/: lib.rs
(+28 files in other folders)
